overflow fix

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -191,7 +191,7 @@ input[type="file"] {
 
 // Feed section
 .feed-container {
-  width: 100%;
+  width: 90%;
   margin-left: 20%;
   height: 100vh;
   .row {
